Add filter to the stock page
